UrGenerator added
Former-commit-id: 8223eeaabecf7d7ec9f29e2840f1c713454d5c43